[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/Menu.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/noto-sans/NotoSansRegular.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/hud/NotoSansHUD.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/ui/Controls.gd" type="Script" id=5]
[ext_resource path="res://scripts/ui/KeybindButton.gd" type="Script" id=6]
[ext_resource path="res://scripts/ui/Pilot.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=1]


[sub_resource type="StyleBoxFlat" id=2]

bg_color = Color( 0.15625, 0.15625, 0.15625, 1 )

[sub_resource type="StyleBoxFlat" id=3]

bg_color = Color( 0.253906, 0.253906, 0.253906, 1 )

[sub_resource type="StyleBoxFlat" id=4]

bg_color = Color( 0.1875, 0.1875, 0.1875, 0.566667 )

[sub_resource type="StyleBoxEmpty" id=5]


[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" type="ScrollContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0

[node name="HUDPanel" type="Control" parent="TabContainer/HUD"]
margin_right = 1588.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1140, 1080 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="HUDPrimaryColor" type="ColorPickerButton" parent="TabContainer/HUD/HUDPanel"]
editor/display_folded = true
margin_left = 456.0
margin_top = 183.0
margin_right = 576.0
margin_bottom = 223.0
custom_fonts/font = ExtResource( 3 )
text = "Primary"
color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="TabContainer/HUD/HUDPanel/HUDPrimaryColor"]
margin_left = -186.0
margin_right = -23.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "HUD primary color:"
align = 2
valign = 1

[node name="HUDSecondaryColor" type="ColorPickerButton" parent="TabContainer/HUD/HUDPanel"]
editor/display_folded = true
margin_left = 456.0
margin_top = 253.0
margin_right = 576.0
margin_bottom = 293.0
custom_fonts/font = ExtResource( 3 )
text = "Secondary"
color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="TabContainer/HUD/HUDPanel/HUDSecondaryColor"]
margin_left = -206.0
margin_right = -23.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "HUD secondary color:"
align = 2
valign = 1

[node name="HUDTertiaryColor" type="ColorPickerButton" parent="TabContainer/HUD/HUDPanel"]
editor/display_folded = true
margin_left = 456.0
margin_top = 317.0
margin_right = 576.0
margin_bottom = 357.0
custom_fonts/font = ExtResource( 3 )
text = "Tertiary"
color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="TabContainer/HUD/HUDPanel/HUDTertiaryColor"]
margin_left = -186.0
margin_right = -23.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "HUD tertiary color:"
align = 2
valign = 1

[node name="HUDFriendlyColor" type="ColorPickerButton" parent="TabContainer/HUD/HUDPanel"]
editor/display_folded = true
margin_left = 810.0
margin_top = 186.0
margin_right = 930.0
margin_bottom = 226.0
custom_fonts/font = ExtResource( 3 )
text = "Primary"
color = Color( 0, 0.352941, 1, 1 )

[node name="Label" type="Label" parent="TabContainer/HUD/HUDPanel/HUDFriendlyColor"]
margin_left = -186.0
margin_right = -23.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Friendly color:"
align = 2
valign = 1

[node name="HUDHostileColor" type="ColorPickerButton" parent="TabContainer/HUD/HUDPanel"]
editor/display_folded = true
margin_left = 805.0
margin_top = 259.0
margin_right = 925.0
margin_bottom = 299.0
custom_fonts/font = ExtResource( 3 )
text = "Primary"
color = Color( 1, 0.12549, 0, 1 )

[node name="Label" type="Label" parent="TabContainer/HUD/HUDPanel/HUDHostileColor"]
margin_left = -186.0
margin_right = -23.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Hostile color:"
align = 2
valign = 1

[node name="HUDNeutralColor" type="ColorPickerButton" parent="TabContainer/HUD/HUDPanel"]
margin_left = 804.0
margin_top = 321.0
margin_right = 924.0
margin_bottom = 361.0
custom_fonts/font = ExtResource( 3 )
text = "Primary"
color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="TabContainer/HUD/HUDPanel/HUDNeutralColor"]
margin_left = -186.0
margin_right = -23.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Neutral color:"
align = 2
valign = 1

[node name="FontSize" type="OptionButton" parent="TabContainer/HUD/HUDPanel"]
margin_left = 283.0
margin_top = 461.0
margin_right = 465.0
margin_bottom = 489.0
text = "Font size:"

[node name="Label" type="Label" parent="TabContainer/HUD/HUDPanel/FontSize"]
margin_left = 200.0
margin_top = -39.0
margin_right = 355.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "test"
valign = 1

[node name="BorderTop" type="Line2D" parent="TabContainer/HUD"]
points = PoolVector2Array( 0, 0, 900, 0 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 690121825

[node name="Controls" type="ScrollContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Categories" type="TabContainer" parent="TabContainer/Controls"]
margin_bottom = 32.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Mech" type="Control" parent="TabContainer/Controls/Categories"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
rect_min_size = Vector2( 1300, 1080 )
theme = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ItemList" type="ItemList" parent="TabContainer/Controls/Categories/Mech"]
editor/display_folded = true
margin_left = 178.0
margin_top = 520.0
margin_right = 243.0
margin_bottom = 565.0
theme = ExtResource( 2 )
auto_height = true

[node name="Text" type="Label" parent="TabContainer/Controls/Categories/Mech/ItemList"]
margin_left = 6.0
margin_top = 7.0
margin_right = 46.0
margin_bottom = 33.0
text = "Text"

[node name="Text2" type="Label" parent="TabContainer/Controls/Categories/Mech/ItemList"]
margin_left = 8.0
margin_top = 32.0
margin_right = 55.0
margin_bottom = 58.0
text = "Text2"

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Controls/Categories/Mech"]
margin_left = 552.0
margin_top = 234.0
margin_right = 862.0
margin_bottom = 520.0

[node name="SectionMovement" type="Label" parent="TabContainer/Controls/Categories/Mech/VBoxContainer"]
margin_right = 339.0
margin_bottom = 26.0
text = "Movement"
align = 1
valign = 1

[node name="SetControlsMovement" type="HBoxContainer" parent="TabContainer/Controls/Categories/Mech/VBoxContainer"]
margin_top = 30.0
margin_right = 339.0
margin_bottom = 122.0

[node name="ControlNames" type="VBoxContainer" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement"]
margin_right = 145.0
margin_bottom = 92.0

[node name="LabelFreelook" type="Label" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement/ControlNames"]
margin_right = 145.0
margin_bottom = 26.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Freelook"

[node name="LabelZoom" type="Label" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement/ControlNames"]
margin_top = 30.0
margin_right = 145.0
margin_bottom = 56.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
text = "Max Throttle"

[node name="LabelZoom2" type="Label" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement/ControlNames"]
margin_top = 60.0
margin_right = 145.0
margin_bottom = 86.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Increase Throttle"

[node name="BindButtons" type="VBoxContainer" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement"]
margin_left = 149.0
margin_right = 197.0
margin_bottom = 92.0

[node name="ButtonFreelook" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement/BindButtons"]
margin_right = 48.0
margin_bottom = 28.0
theme = ExtResource( 2 )
text = "k"
script = ExtResource( 6 )

[node name="Button2" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement/BindButtons"]
margin_top = 32.0
margin_right = 48.0
margin_bottom = 60.0
text = "Press"

[node name="Button3" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement/BindButtons"]
margin_top = 64.0
margin_right = 48.0
margin_bottom = 92.0
text = "Press"

[node name="BindButtonsAlt" type="VBoxContainer" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement"]
margin_left = 201.0
margin_right = 249.0
margin_bottom = 92.0

[node name="ButtonFreelookAlt" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement/BindButtonsAlt"]
margin_right = 48.0
margin_bottom = 28.0
text = "Press"

[node name="Button2" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement/BindButtonsAlt"]
margin_top = 32.0
margin_right = 48.0
margin_bottom = 60.0
text = "Press"

[node name="Button3" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement/BindButtonsAlt"]
margin_top = 64.0
margin_right = 48.0
margin_bottom = 92.0
text = "Press"

[node name="SectionCombat" type="Label" parent="TabContainer/Controls/Categories/Mech/VBoxContainer"]
margin_top = 126.0
margin_right = 339.0
margin_bottom = 152.0
text = "Combat"
align = 1
valign = 1

[node name="SetControlsMovement2" type="HBoxContainer" parent="TabContainer/Controls/Categories/Mech/VBoxContainer"]
editor/display_folded = true
margin_top = 156.0
margin_right = 339.0
margin_bottom = 248.0
alignment = 1

[node name="ControlNames" type="VBoxContainer" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement2"]
editor/display_folded = true
margin_right = 235.0
margin_bottom = 92.0

[node name="LabelFreelook" type="Label" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement2/ControlNames"]
margin_right = 235.0
margin_bottom = 26.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Fire selected weapon group"

[node name="LabelZoom" type="Label" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement2/ControlNames"]
margin_top = 30.0
margin_right = 235.0
margin_bottom = 56.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Toggle Chainfire"

[node name="LabelZoom2" type="Label" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement2/ControlNames"]
margin_top = 60.0
margin_right = 235.0
margin_bottom = 86.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Fire weapon group 1"

[node name="BindButtons" type="VBoxContainer" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement2"]
editor/display_folded = true
margin_left = 239.0
margin_right = 287.0
margin_bottom = 92.0

[node name="Button" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement2/BindButtons"]
margin_right = 48.0
margin_bottom = 28.0
text = "Press"

[node name="Button2" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement2/BindButtons"]
margin_top = 32.0
margin_right = 48.0
margin_bottom = 60.0
text = "Press"

[node name="Button3" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement2/BindButtons"]
margin_top = 64.0
margin_right = 48.0
margin_bottom = 92.0
text = "Press"

[node name="BindButtons2" type="VBoxContainer" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement2"]
editor/display_folded = true
margin_left = 291.0
margin_right = 339.0
margin_bottom = 92.0

[node name="Button" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement2/BindButtons2"]
margin_right = 48.0
margin_bottom = 28.0
text = "Press"

[node name="Button2" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement2/BindButtons2"]
margin_top = 32.0
margin_right = 48.0
margin_bottom = 60.0
text = "Press"

[node name="Button3" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement2/BindButtons2"]
margin_top = 64.0
margin_right = 48.0
margin_bottom = 92.0
text = "Press"

[node name="SectionCombat2" type="Label" parent="TabContainer/Controls/Categories/Mech/VBoxContainer"]
margin_top = 252.0
margin_right = 339.0
margin_bottom = 278.0
text = "???"
align = 1
valign = 1

[node name="SetControlsMovement3" type="HBoxContainer" parent="TabContainer/Controls/Categories/Mech/VBoxContainer"]
margin_top = 282.0
margin_right = 339.0
margin_bottom = 374.0
alignment = 1

[node name="ControlNames" type="VBoxContainer" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement3"]
margin_left = 63.0
margin_right = 171.0
margin_bottom = 92.0

[node name="LabelFreelook" type="Label" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement3/ControlNames"]
margin_right = 108.0
margin_bottom = 26.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "ꭁꭏ"

[node name="LabelZoom" type="Label" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement3/ControlNames"]
margin_top = 30.0
margin_right = 108.0
margin_bottom = 56.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Self-destruct"

[node name="LabelZoom2" type="Label" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement3/ControlNames"]
margin_top = 60.0
margin_right = 108.0
margin_bottom = 86.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "L-°"

[node name="BindButtons" type="VBoxContainer" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement3"]
editor/display_folded = true
margin_left = 175.0
margin_right = 223.0
margin_bottom = 92.0

[node name="Button" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement3/BindButtons"]
margin_right = 48.0
margin_bottom = 28.0
text = "Press"

[node name="Button2" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement3/BindButtons"]
margin_top = 32.0
margin_right = 48.0
margin_bottom = 60.0
text = "Press"

[node name="Button3" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement3/BindButtons"]
margin_top = 64.0
margin_right = 48.0
margin_bottom = 92.0
text = "Press"

[node name="BindButtons2" type="VBoxContainer" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement3"]
editor/display_folded = true
margin_left = 227.0
margin_right = 275.0
margin_bottom = 92.0

[node name="Button" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement3/BindButtons2"]
margin_right = 48.0
margin_bottom = 28.0
text = "Press"

[node name="Button2" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement3/BindButtons2"]
margin_top = 32.0
margin_right = 48.0
margin_bottom = 60.0
text = "Press"

[node name="Button3" type="Button" parent="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement3/BindButtons2"]
margin_top = 64.0
margin_right = 48.0
margin_bottom = 92.0
text = "Press"

[node name="Pilot" type="ScrollContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="TabContainer/Pilot"]
__meta__ = {
"_edit_lock_": true
}

[node name="PilotNameLabel" type="Label" parent="TabContainer/Pilot/Control"]
margin_left = 458.0
margin_top = 257.0
margin_right = 550.0
margin_bottom = 283.0
custom_fonts/font = ExtResource( 3 )
text = "Pilot name"

[node name="PilotNameField" type="LineEdit" parent="TabContainer/Pilot/Control"]
margin_left = 573.0
margin_top = 252.0
margin_right = 800.0
margin_bottom = 288.0
focus_mode = 1
text = "Player"
focus_mode = 1
caret_blink = true

[node name="PilotNameColor" type="ColorPickerButton" parent="TabContainer/Pilot/Control"]
margin_left = 832.0
margin_top = 256.0
margin_right = 893.0
margin_bottom = 284.0
color = Color( 1, 1, 1, 1 )

[node name="CanvasLayer" type="Control" parent="."]

[node name="SaveButton" type="Button" parent="CanvasLayer"]
margin_left = 112.0
margin_top = 46.0
margin_right = 232.0
margin_bottom = 86.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Save"

[node name="KeybindPrompt" type="Label" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 284.0
margin_top = 52.0
margin_right = 510.0
margin_bottom = 78.0
theme = ExtResource( 2 )
custom_styles/normal = SubResource( 5 )
text = "Press a Key | Esc to cancel"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="."]
anchor_right = 1.0
margin_top = 90.0
margin_bottom = 94.0

[connection signal="resized" from="TabContainer/HUD" to="." method="_on_ScrollContainer_resized"]
[connection signal="item_selected" from="TabContainer/HUD/HUDPanel/FontSize" to="." method="_on_FontSize_item_selected"]
[connection signal="pressed" from="TabContainer/Controls/Categories/Mech/VBoxContainer/SetControlsMovement/BindButtons/ButtonFreelook" to="TabContainer/Controls" method="_on_ButtonFreelook_pressed"]
[connection signal="pressed" from="CanvasLayer/SaveButton" to="." method="_on_SaveButton_pressed"]
